fix button centering on mobile

--- a/client/src/pages/experiment.css
+++ b/client/src/pages/experiment.css
@@ -47,6 +47,7 @@
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
+    align-items: center;
   }
   
   .inner-button-container{
@@ -54,6 +55,11 @@
     flex-wrap: nowrap;
     padding-top: 10px;
     width: 100%;
+    align-items: center;
+  }
+  .inner-button-container button {
+    width: 100%; 
+    box-sizing: border-box; 
   }
 }
 
